--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,11 +1,17 @@
 .place__description {
   margin: 30px 16px;
   width: 90%;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', 'Trebuchet MS', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.63;
+}
+
+@media screen and (min-width: 1024px) {
+  .place__description {
+    font-size: 18px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -13,11 +19,5 @@
     margin: 0;
     width: 100%;
     grid-area: description;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .place__description {
-    font-size: 18px;
   }
 }
