--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,11 +1,18 @@
 .place__title {
   margin-left: 16px;
   width: 90%;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', 'Trebuchet MS', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
   line-height: 35px;
+}
+
+@media screen and (min-width: 1024px) {
+  .place__title {
+    font-size: 72px;
+    line-height: 76px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -14,12 +21,5 @@
     grid-area: title;
     font-size: 42px;
     line-height: 46px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .place__title {
-    font-size: 72px;
-    line-height: 76px;
   }
 }
