--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -2,7 +2,7 @@
   margin-bottom: 12px;
   width: 90%;
   align-self: flex-start;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', 'Trebuchet MS', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
