--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -5,3 +5,9 @@
     display: flex;
     align-items: center;
 }
+
+@media screen and (max-width: 767px) {
+    .header__links li:last-of-type a {
+        margin-right: 16px;
+    }
+}
