--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -22,7 +22,6 @@
 @media screen and (max-width: 1023px) {
     .header {
       width: calc(100% - 24px * 2);
-      margin-bottom: 50px;
       font-size: 24px;
       line-height: 28px;
     }
@@ -32,5 +31,6 @@
     .header {
       width: calc(100% - 16px * 2);
       margin: 20px auto 50px;
+      margin-right: 0;
     }
   }
