--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,15 @@
-@media screen and (min-width: 768px) {
+.place__paragraph:last-of-type {
+  margin: 0;
+}
+
+@media screen and (min-width: 1023px) and (max-width: 1279px) {
   .place__paragraph:first-of-type {
-    margin: 0;
+    width: 456px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__paragraph:last-of-type {
+    margin-bottom: 48px;
   }
 }
