--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title {
-  margin-top: 0;
+  margin-top: 0px;
   margin-bottom: 0;
   width: 90%;
   font-family: 'Inter', 'Trebuchet MS', sans-serif;
@@ -11,18 +11,23 @@
 
 @media screen and (min-width: 1024px) {
   .place__title {
-    margin-bottom: 0;
     margin-left: 0;
     font-size: 72px;
     line-height: 76px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) {
   .place__title {
     margin: 0;
     grid-area: title;
     font-size: 42px;
     line-height: 46px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .place__title {
+    margin-left: 16px;
   }
 }
