--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -26,12 +26,12 @@
 
 @media screen and (min-width: 1024px) {
   .place {
+    max-width: 928px;
     padding-bottom: 80px;
     grid-template-columns: minmax(440px, 1fr) auto;
     column-gap: 32px;
   }
 }
-
 
 @media screen and (min-width: 768px) {
   .place {
