--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,6 +2,10 @@
     margin: 46px 148px 0 0;
     font-size: 24px;
     line-height: 28px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: right;
     text-decoration: none;
     background-color: transparent;
     color: #fff;
@@ -14,8 +18,6 @@
 @media screen and (max-width: 1023px) {
     .header__lang-link {
         margin: 46px 48px 0 0;
-        font-size: 18px;
-        line-height: 20px;
 
     }
 }
@@ -23,7 +25,9 @@
 @media screen and (max-width: 767px) {
     .header__lang-link {
         margin: 46px 24px 0 0;
-
+        font-family: 'Inter', 'Trebuchet MS', sans-serif;
+        font-size: 18px;
+        line-height: 20px;
     }
 }
 
